# wasm-binius

./: Cargo.toml  README.md
crates/core/src/poly_commit/: tensor_pcs.rs
crates/core/src/protocols/: test_utils.rs
crates/core/src/protocols/evalcheck/: evalcheck.rs  prove.rs  verify.rs
crates/core/src/protocols/prodcheck/: prove.rs
crates/core/src/protocols/sumcheck/: prove.rs
crates/core/src/protocols/zerocheck/: prove.rs
wasm_keccak/: Cargo.toml  README.md  index.html
wasm_keccak/src/: keccakf.rs  lib.rs
