[package]
name = "wasm_keccak"
edition = "2021"

[lib]
# crate-type = ["cdylib"]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window", "console"] }
console_error_panic_hook = { version = "0.1", optional = true }
binius_core = { path = "../crates/core" }
binius_field = { path = "../crates/field" }
binius_hash = { path = "../crates/hash" }
binius_macros = { path = "../crates/macros"}
getrandom = { version = "0.2.15", features = ["js"] }
bytemuck.workspace = true
p3-challenger.workspace = true
rand.workspace = true
rayon.workspace = true
tiny-keccak.workspace = true
tracing-profile.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# Add dependencies from your existing project
# Ensure all dependencies are compatible with WASM

[features]
default = ["console_error_panic_hook"]